[package]
name = "conveyor-belt"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.21.0"
bevy_asset_loader = { version = "0.18.0", features = ["3d"] }
ordered-float = "4.2.0"
