[package]
name = "conveyor-belt"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy_asset_loader = { version = "0.19.0", features = ["3d"] }
bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }
bevy-inspector-egui = "0.22.0"
bevy-scene-hook = "9.0.0"
ordered-float = "4.2.0"
bevy_rapier3d = "0.23.0"
bevy_vector_shapes = "0.6.0"
