[package]
name = "conveyor-belt"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.22.0"
bevy-scene-hook = "9.0.0"
bevy_asset_loader = { version = "0.19.0", features = ["3d"] }
bevy_atmosphere = { version = "0.8.1", default-features = false, features = ["nishita", "dithering", "procedural", "gradient", "basic"] }
bevy_dolly = "0.0.2"
bevy_xpbd_3d = "0.3"
interpolation = "0.3.0"
ordered-float = "4.2.0"
